--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Legatio Finance - Investissez dans l’Immobilier comme Jamais Auparavant</title>
-    <meta name="description" content="Legatio Finance : Investissez dans l’immobilier tokenisé dès 100$, accédez à des prêts crypto et générez des rendements passifs en 2025 avec la blockchain.">
-    <meta name="keywords" content="immobilier tokenisé, NFTs immobiliers, staking LEG, prêts crypto, blockchain, investissement, legatio finance">
+    <title>Legatio Finance - Investissement Immobilier Tokenisé</title>
+    <meta name="description" content="Legatio Finance : Investissez dans l’immobilier tokenisé dès 100$ avec des rendements passifs en 2025 via la blockchain.">
+    <meta name="keywords" content="immobilier tokenisé, NFTs, staking, prêts crypto, blockchain">
     <meta name="author" content="Legatio Finance Team">
-    <meta property="og:title" content="Legatio Finance - Investissez dans l’Immobilier comme Jamais Auparavant">
-    <meta property="og:description" content="Investissez dans l’immobilier tokenisé dès 100$, accédez à des prêts crypto et générez des rendements passifs en 2025 avec Legatio Finance.">
-    <meta property="og:image" content="https://delmarcrypto.github.io/legatio-finance/favicon.png">
-    <meta property="og:url" content="https://delmarcrypto.github.io/legatio-finance/">
-    <meta property="og:type" content="website">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,111 +17,116 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="container">
+            <ul>
+                <li><a href="#start">Accueil</a></li>
+                <li><a href="#how-to-invest">Solutions</a></li>
+                <li><a href="#investors">Investisseurs</a></li>
+                <li><a href="#faq">FAQ</a></li>
+            </ul>
+        </div>
+    </nav>
+
     <header class="header">
         <div class="header-content">
             <h1>Legatio Finance</h1>
             <p>Investissez dans l’immobilier tokenisé dès 100$ avec des rendements passifs en 2025.</p>
-            <a href="#start" class="cta-button">Découvrir Maintenant</a>
+            <a href="#start" class="cta-button" aria-label="Découvrir les offres">Découvrir Maintenant</a>
         </div>
     </header>
 
     <div class="container">
-        <!-- Section de départ -->
         <section id="start" class="section start-section">
             <h2>Bienvenue chez Legatio Finance</h2>
-            <p>Commencez votre voyage dans l’immobilier tokenisé dès aujourd’hui avec une plateforme sécurisée et innovante.</p>
+            <p>Découvrez une plateforme innovante pour investir dans l’immobilier tokenisé avec sécurité et simplicité.</p>
         </section>
 
-        <!-- Avant / Après -->
         <div class="section before-after">
-            <h2>Avant et Après avec Legatio Finance</h2>
+            <h2>Avant et Après</h2>
             <div class="before-after-content">
                 <div class="before">
-                    <h3>📌 Avant (Modèle Traditionnel)</h3>
+                    <h3>📌 Avant</h3>
                     <ul>
-                        <li>Accès limité par les banques et fonds.</li>
+                        <li>Accès limité par les banques.</li>
                         <li>Capital élevé requis.</li>
-                        <li>Processus lent avec intermédiaires.</li>
+                        <li>Processus lent.</li>
                     </ul>
                 </div>
                 <div class="after">
-                    <h3>🚀 Après (Modèle Tokenisé)</h3>
+                    <h3>🚀 Après</h3>
                     <ul>
-                        <li>Accès direct via blockchain.</li>
-                        <li>Investissement dès 100$ avec NFTs.</li>
-                        <li>Processus rapide et transparent.</li>
+                        <li>Accès via blockchain.</li>
+                        <li>Investissement dès 100$.</li>
+                        <li>Processus rapide.</li>
                     </ul>
                 </div>
             </div>
         </div>
 
-        <!-- Pourquoi choisir Legatio Finance ? -->
         <div class="section why-choose">
-            <h2>Pourquoi Choisir Legatio Finance ?</h2>
+            <h2>Pourquoi Nous Choisir ?</h2>
             <div class="why-choose-list">
                 <div class="why-choose-item">
                     <i class="fas fa-unlock-alt fa-2x"></i>
                     <h3>Accessibilité</h3>
-                    <p>Investissez dès 100$ avec des NFTs fractionnés.</p>
+                    <p>Investissez dès 100$ avec NFTs.</p>
                 </div>
                 <div class="why-choose-item">
                     <i class="fas fa-chart-line fa-2x"></i>
                     <h3>Rendements</h3>
-                    <p>Générez des revenus passifs via staking.</p>
+                    <p>5-7% par an via staking.</p>
                 </div>
                 <div class="why-choose-item">
                     <i class="fas fa-shield-alt fa-2x"></i>
                     <h3>Sécurité</h3>
-                    <p>Audits réguliers et conformité KYC/AML.</p>
+                    <p>Audits CertiK et KYC/AML.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Comment investir -->
         <div id="how-to-invest" class="section how-to-invest">
             <h2>Comment Investir ?</h2>
             <div class="how-to-invest-steps">
                 <div class="how-to-invest-step">
                     <i class="fas fa-wallet fa-2x"></i>
-                    <h3>1. Connectez Votre Portefeuille</h3>
-                    <p>Utilisez MetaMask pour commencer.</p>
+                    <h3>1. Connectez</h3>
+                    <p>Utilisez MetaMask.</p>
                 </div>
                 <div class="how-to-invest-step">
                     <i class="fas fa-building fa-2x"></i>
-                    <h3>2. Achetez des NFTs</h3>
-                    <p>Investissez dans des parts d’immeubles.</p>
+                    <h3>2. Achetez</h3>
+                    <p>Parts d’immeubles NFTs.</p>
                 </div>
                 <div class="how-to-invest-step">
                     <i class="fas fa-money-bill-wave fa-2x"></i>
-                    <h3>3. Gagnez des Rendements</h3>
-                    <p>Stakez ou prêtez vos actifs.</p>
+                    <h3>3. Gagnez</h3>
+                    <p>Stakez pour des rendements.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Nos Solutions -->
         <div class="section services">
             <h2>Nos Solutions</h2>
             <div class="service-list">
                 <div class="service-item">
                     <i class="fas fa-gem fa-2x"></i>
                     <h3>NFTs Immobiliers</h3>
-                    <p>Parts tokenisées dès 100$.</p>
+                    <p>À partir de 100$ par part.</p>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-coins fa-2x"></i>
                     <h3>Staking LEG</h3>
-                    <p>Rendements passifs et réductions.</p>
+                    <p>Rendements de 5% annuel.</p>
                 </div>
                 <div class="service-item">
                     <i class="fas fa-hand-holding-usd fa-2x"></i>
                     <h3>Prêts Crypto</h3>
-                    <p>Emprunts sécurisés via collatéral.</p>
+                    <p>Emprunts sécurisés.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Simulateur -->
         <div class="section simulator">
             <h2>Simulateur de Prêt</h2>
             <div class="simulator-form">
@@ -136,78 +136,80 @@
                 <input type="number" id="duration" value="12" required>
                 <label for="interestRate">Taux (%) :</label>
                 <input type="number" id="interestRate" value="5" required>
-                <button onclick="calculateLoan()">Calculer</button>
+                <button onclick="calculateLoan()" aria-label="Calculer le prêt">Calculer</button>
             </div>
             <p>Montant total : <span id="totalRepayment">0</span> USDT</p>
         </div>
 
-        <!-- Témoignages -->
         <div class="section testimonials">
             <h2>Ils Parlent de Nous</h2>
-            <div class="testimonial-list">
+            <div class="testimonial-carousel">
                 <p>"Une révolution pour l’immobilier blockchain." - Marc T.</p>
                 <p>"Simple et sécurisé pour diversifier." - Sophie R.</p>
+                <p>"Rendements impressionnants en 6 mois." - Pierre L.</p>
             </div>
             <p class="certifications">Audité par CertiK | Conforme KYC/AML</p>
         </div>
 
-        <!-- Roadmap -->
         <div class="section roadmap">
             <h2>Notre Roadmap</h2>
             <div class="timeline">
                 <div class="timeline-item">
                     <h3>Q2 2025</h3>
-                    <p>Levée de fonds et audits.</p>
+                    <p>Levée de 1M$ et audit blockchain.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>Q3 2025</h3>
-                    <p>Prévente NFTs et LEG.</p>
+                    <p>Prévente de 500 NFTs.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>Q4 2025</h3>
-                    <p>Tokenisation d’immeubles.</p>
+                    <p>Tokenisation de 5 immeubles.</p>
                 </div>
                 <div class="timeline-item">
                     <h3>Q1 2026</h3>
-                    <p>Expansion institutionnelle.</p>
+                    <p>Expansion en Europe.</p>
                 </div>
             </div>
         </div>
 
-        <!-- FAQ -->
         <div class="section faq" id="faq">
             <h2>Questions Fréquentes</h2>
             <div class="faq-list">
                 <div class="faq-item">
                     <h3>Comment acheter un NFT ?</h3>
-                    <p>Via votre portefeuille avec stablecoins.</p>
+                    <p>Connectez votre portefeuille et payez en stablecoins.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Quels sont les risques ?</h3>
+                    <h3>Quels risques ?</h3>
                     <p>Variations du marché crypto possibles.</p>
                 </div>
                 <div class="faq-item">
-                    <h3>Comment retirer mes gains ?</h3>
+                    <h3>Retrait des gains ?</h3>
                     <p>Via notre DApp sécurisée.</p>
                 </div>
             </div>
         </div>
 
-        <!-- Investisseurs -->
-        <div class="section investors">
+        <div class="section learn">
+            <h2>Apprenez l’Immobilier Tokenisé</h2>
+            <p>Découvrez des guides pour débutants : <a href="#">Qu’est-ce qu’un NFT immobilier ?</a></p>
+        </div>
+
+        <div id="investors" class="section investors">
             <h2>Pour les Investisseurs</h2>
-            <p>Découvrez notre vision pour l’immobilier tokenisé.</p>
+            <p>Explorez notre vision innovante.</p>
             <div class="investor-buttons">
-                <a href="./PitchDeck.pdf" class="cta-button" target="_blank">Pitch Deck</a>
-                <a href="./WhitePaper.pdf" class="cta-button" target="_blank">White Paper</a>
+                <a href="./PitchDeck.pdf" class="cta-button" target="_blank" aria-label="Télécharger le Pitch Deck">Pitch Deck</a>
+                <a href="./WhitePaper.pdf" class="cta-button" target="_blank" aria-label="Télécharger le White Paper">White Paper</a>
+                <a href="#contact" class="cta-button" aria-label="Demander une démo">Demander une Démo</a>
             </div>
         </div>
 
-        <!-- Restez Informé -->
         <div class="section stay-informed">
             <h2>Rejoignez la Révolution</h2>
-            <p>Inscrivez-vous pour recevoir nos dernières nouvelles.</p>
-            <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank">S’inscrire</a>
+            <p>Inscrivez-vous pour nos mises à jour.</p>
+            <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank" aria-label="S’inscrire">S’inscrire</a>
         </div>
     </div>
 
@@ -222,6 +224,7 @@
             </div>
             <div class="footer-contact">
                 <p>Contact : <a href="mailto:legatio.finance@gmail.com">legatio.finance@gmail.com</a> | © 2025 Legatio Finance</p>
+                <a href="#" class="back-to-top" aria-label="Retour en haut">↑</a>
             </div>
         </div>
     </footer>
@@ -235,6 +238,18 @@
                 button.addEventListener('click', () => {
                     gsap.to(button, { scale: 1.1, duration: 0.3, yoyo: true });
                 });
+            });
+
+            const carousel = document.querySelector('.testimonial-carousel');
+            let index = 0;
+            setInterval(() => {
+                gsap.to(carousel.children[index], { opacity: 0, duration: 0.5 });
+                index = (index + 1) % carousel.children.length;
+                gsap.fromTo(carousel.children[index], { opacity: 0 }, { opacity: 1, duration: 0.5 });
+            }, 5000);
+
+            document.querySelector('.back-to-top').addEventListener('click', () => {
+                window.scrollTo({ top: 0, behavior: 'smooth' });
             });
         });
 
