--- a/index.html
+++ b/index.html
@@ -206,28 +206,33 @@
             </div>
         </div>
 
-        <div class="section stay-informed">
-            <h2>Rejoignez la Révolution</h2>
-            <p>Inscrivez-vous pour nos mises à jour.</p>
-            <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank" aria-label="S’inscrire">S’inscrire</a>
-        </div>
-    </div>
+        <!-- ... (reste du HTML inchangé jusqu'à "Restez Informé") ... -->
 
-    <footer class="footer">
-        <div class="footer-content">
-            <div class="social-links">
-                <a href="https://x.com/rdb_legend" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="https://discord.com/channels/1347668715357077577/1347668716120182888" target="_blank" aria-label="Discord"><i class="fab fa-discord"></i></a>
-            </div>
-            <div class="footer-links">
-                <a href="#faq">FAQ</a> | <a href="https://www.linkedin.com/feed/" target="_blank">Mentions Légales</a>
-            </div>
-            <div class="footer-contact">
-                <p>Contact : <a href="mailto:legatio.finance@gmail.com">legatio.finance@gmail.com</a> | © 2025 Legatio Finance</p>
-                <a href="#" class="back-to-top" aria-label="Retour en haut">↑</a>
-            </div>
+<div class="section stay-informed">
+    <h2>Rejoignez la Révolution</h2>
+    <p>Inscrivez-vous pour nos mises à jour.</p>
+    <div class="stay-informed-actions">
+        <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank" aria-label="S’inscrire">S’inscrire</a>
+    </div>
+</div>
+
+<footer class="footer">
+    <div class="footer-content">
+        <div class="social-links">
+            <a href="https://x.com/rdb_legend" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://discord.com/channels/1347668715357077577/1347668716120182888" target="_blank" aria-label="Discord"><i class="fab fa-discord"></i></a>
         </div>
-    </footer>
+        <div class="footer-links">
+            <a href="#faq">FAQ</a> | <a href="https://www.linkedin.com/feed/" target="_blank">Mentions Légales</a>
+        </div>
+        <div class="footer-contact">
+            <p>Contact : <a href="mailto:legatio.finance@gmail.com">legatio.finance@gmail.com</a> | © 2025 Legatio Finance</p>
+        </div>
+        <a href="#" class="back-to-top" aria-label="Retour en haut">↑</a>
+    </div>
+</footer>
+
+<!-- ... (reste du script inchangé) ... -->
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
