--- a/index.html
+++ b/index.html
@@ -202,14 +202,16 @@
             <div class="investor-buttons">
                 <a href="./PitchDeck.pdf" class="cta-button" target="_blank" aria-label="Télécharger le Pitch Deck">Pitch Deck</a>
                 <a href="./WhitePaper.pdf" class="cta-button" target="_blank" aria-label="Télécharger le White Paper">White Paper</a>
-                <a href="#contact" class="cta-button" aria-label="Demander une démo">Demander une Démo</a>
+                <a href="#" class="cta-button" id="open-demo-modal" aria-label="Demander une démo">Demander une Démo</a>
             </div>
         </div>
 
         <div class="section stay-informed">
             <h2>Rejoignez la Révolution</h2>
             <p>Inscrivez-vous pour nos mises à jour.</p>
-            <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank" aria-label="S’inscrire">S’inscrire</a>
+            <div class="stay-informed-actions">
+                <a href="https://forms.zoho.eu/legatiofinancegm1/form/FormationLegatio" class="cta-button" target="_blank" aria-label="S’inscrire">S’inscrire</a>
+            </div>
         </div>
     </div>
 
@@ -224,10 +226,35 @@
             </div>
             <div class="footer-contact">
                 <p>Contact : <a href="mailto:legatio.finance@gmail.com">legatio.finance@gmail.com</a> | © 2025 Legatio Finance</p>
-                <a href="#" class="back-to-top" aria-label="Retour en haut">↑</a>
             </div>
+            <a href="#" class="back-to-top" aria-label="Retour en haut">↑</a>
         </div>
     </footer>
+
+    <!-- Modale pour la capture de leads -->
+    <div id="demo-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal" id="close-demo-modal">×</span>
+            <h2>Demander une Démo</h2>
+            <p>Remplissez le formulaire ci-dessous pour planifier une démo avec notre équipe.</p>
+            <div id="form-message" style="display: none; color: #2c3e50; margin-bottom: 20px;"></div>
+            <form id="demo-form" action="https://formspree.io/f/mpwpavjj" method="POST">
+                <div class="form-group">
+                    <label for="name">Nom :</label>
+                    <input type="text" id="name" name="name" required placeholder="Votre nom">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email :</label>
+                    <input type="email" id="email" name="email" required placeholder="Votre email">
+                </div>
+                <div class="form-group">
+                    <label for="message">Message (optionnel) :</label>
+                    <textarea id="message" name="message" placeholder="Dites-nous en plus..."></textarea>
+                </div>
+                <button type="submit" class="cta-button">Envoyer</button>
+            </form>
+        </div>
+    </div>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
@@ -250,6 +277,68 @@
 
             document.querySelector('.back-to-top').addEventListener('click', () => {
                 window.scrollTo({ top: 0, behavior: 'smooth' });
+            });
+
+            // Gestion de la modale
+            const modal = document.getElementById('demo-modal');
+            const openModalBtn = document.getElementById('open-demo-modal');
+            const closeModalBtn = document.getElementById('close-demo-modal');
+            const form = document.getElementById('demo-form');
+            const formMessage = document.getElementById('form-message');
+
+            openModalBtn.addEventListener('click', (e) => {
+                e.preventDefault();
+                modal.style.display = 'block';
+                gsap.fromTo(modal, { opacity: 0, scale: 0.9 }, { opacity: 1, scale: 1, duration: 0.3 });
+            });
+
+            closeModalBtn.addEventListener('click', () => {
+                gsap.to(modal, { opacity: 0, scale: 0.9, duration: 0.3, onComplete: () => {
+                    modal.style.display = 'none';
+                    formMessage.style.display = 'none'; // Réinitialiser le message
+                    form.reset(); // Réinitialiser le formulaire
+                } });
+            });
+
+            window.addEventListener('click', (e) => {
+                if (e.target === modal) {
+                    gsap.to(modal, { opacity: 0, scale: 0.9, duration: 0.3, onComplete: () => {
+                        modal.style.display = 'none';
+                        formMessage.style.display = 'none'; // Réinitialiser le message
+                        form.reset(); // Réinitialiser le formulaire
+                    } });
+                }
+            });
+
+            // Gestion de la soumission du formulaire
+            form.addEventListener('submit', async (e) => {
+                e.preventDefault(); // Empêcher la soumission par défaut
+
+                const formData = new FormData(form);
+                try {
+                    const response = await fetch(form.action, {
+                        method: 'POST',
+                        body: formData,
+                        headers: {
+                            'Accept': 'application/json'
+                        }
+                    });
+
+                    if (response.ok) {
+                        formMessage.style.display = 'block';
+                        formMessage.style.color = '#2c3e50';
+                        formMessage.textContent = 'Merci ! Nous vous contacterons bientôt.';
+                        form.reset(); // Réinitialiser le formulaire après soumission
+                    } else {
+                        formMessage.style.display = 'block';
+                        formMessage.style.color = '#e74c3c';
+                        formMessage.textContent = 'Une erreur s’est produite. Veuillez réessayer.';
+                    }
+                } catch (error) {
+                    formMessage.style.display = 'block';
+                    formMessage.style.color = '#e74c3c';
+                    formMessage.textContent = 'Une erreur s’est produite. Veuillez réessayer.';
+                }
             });
         });
 
