--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h2>Avant et Après</h2>
             <div class="before-after-content">
                 <div class="before">
-                    <h3>📌 Avant</h3>
+                    <h3>❌ Avant</h3>
                     <ul>
                         <li>Accès limité par les banques.</li>
                         <li>Capital élevé requis.</li>
@@ -54,7 +54,7 @@
                     </ul>
                 </div>
                 <div class="after">
-                    <h3>🚀 Après</h3>
+                    <h3>✅ Après</h3>
                     <ul>
                         <li>Accès via blockchain.</li>
                         <li>Investissement dès 100$.</li>
