--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
 </head>
+
+    <script src="script.js"></script>
+
 <body>
     <nav class="navbar">
         <div class="container">
